syntax = "proto3";
package codern.grading;

message Submission {
  int32 id = 1;
  int32 questionId = 2;
  string userId = 3;
  string language = 4;
  string filePath = 5;
  repeated Result results = 7;
  uint64 uploadedAt = 8;
}

message Result {
  int32 id = 1;
  int32 submissionId = 2;
  int32 testcaseId = 3;
  string status = 4;
  optional double memoryUsage = 5;
  optional double timeUsage = 6;
  optional string compilationLog = 7;
}

message QuestionSummary {
  int32 questionId = 1;
  uint64 uploadedAt = 2;
  string status = 3;
}

message CreateGradingQuestion {
  int32 questionId = 1;
  int32 workspaceId = 2;
  int32 score = 3;
  string name = 4;
  double memoryLimit = 5;
  double timeLimit  = 6;
}

// TODO: hardcoded for BMH2023
message Rank {
  string userId = 1;
  double totalScore = 2;
  int32 submissionCount = 3;
  uint64 lastUploadedAt = 4;
}
