syntax = "proto3";
package codern.workspace;

import "workspace/message.proto";

service WorkspaceService {
  rpc GetAllWorkspaces(GetAllWorkspacesRequest) returns (GetAllWorkspacesResponse);
  rpc GetWorkspaceById(GetWorkspaceByIdRequest) returns (GetWorkspaceByIdResponse);
  rpc GetQuestionsByWorkspaceId(GetQuestionsByWorkspaceIdRequest) returns (GetQuestionsByWorkspaceIdResponse);
  rpc GetQuestionById(GetQuestionByIdRequest) returns (GetQuestionByIdResponse);
}
